--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Whole-genome dot-plots"
+title: "Alignment line plots, whole genomes"
 author: 
  - "Charles Plessy"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteEncoding{UTF-8}
-  %\VignetteIndexEntry{Whole-genome dot-plots}
+  %\VignetteIndexEntry{Alignment line plots, whole genomes}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
   chunk_output_type: console
@@ -22,13 +22,7 @@ This vignette produces alignment line plots of pairs of genomes to illustrate
 differences in the extent of scrambling in _Oikopleura_ compared to equivalent
 pairs in other genera.
 
-The core functions used here are maintained in our _GenomicBreaks_ R package,
-which is fully documented at: <https://oist.github.io/GenomicBreaks>.
-
-See `vignette("ParallelPlots", package = "OikScrambling")` for parallel
-comparisons of homologous chromosomes in more than one species.
-
-## Load pacakges
+Figure 1 panel A was generated in this vignette.
 
 # Load R pacakges and data
 
@@ -40,66 +34,12 @@ load("BreakPoints.Rdata")
 
 # Oikopleura
 
-## Oki vs Bar
-
-```{r Oki_Bar_all}
-makeOxfordPlots(coa$Oki_Bar, diag = FALSE)
-```
-
-```{r mkOxPlotWindow_function}
-# stringDist_GBreaks <- function(x, method = "levenshtein", ignoreCase = FALSE, diag = FALSE, upper = FALSE, ...) {
-#   targetS <- getSeq(x)
-#   queryS  <- getSeq(x$query)
-#   seqs <- Pairs(targetS, queryS)
-#   sapply(seqs, \(pair){
-#     stringDist(c(first(pair), second(pair)))
-#   })
-# }
-
-mkOxPlotWindow <- function(gb, win = 5e6, size = 2, centre = c('midpoint', 'maxwidth'), ...) {
-  centre <- match.arg(centre)
-  gb <- forceSeqLengths(gb)
-  longest_target_seq <- seqlengths(gb) |> sort() |> tail(1) |> names()
-  best_query_match   <- gb[seqnames(gb) == longest_target_seq]$query |> seqnames() |> table() |> sort() |> tail(1) |> names()
-  if (centre == 'midpoint') {
-    target_centre <- round(seqlengths(gb)[longest_target_seq]     / 2)
-    query_centre  <- round(seqlengths(gb$query)[best_query_match] / 2)
-  } else {
-    gb_coa <- coalesce_contigs(gb)
-    maxwidth <- which.max(width(gb_coa))
-    target_centre <- gb_coa[maxwidth]       |> resize(1, fix = "center") |> start()
-    query_centre  <- gb_coa$query[maxwidth] |> resize(1, fix = "center") |> start()
-  }
-  gb <- gb |> plyranges::filter(
-    seqnames == longest_target_seq,
-    seqnames(query) == best_query_match,
-    start > target_centre - win,
-    end < target_centre + win,
-    start(query) > query_centre - win,
-    end(query) < query_centre + win
-  )
-  # score(gb) <- stringDist_GBreaks(gb) / width(gb)
-  makeOxfordPlots(gb, col = "strand", size = size, ...) +
-    theme_bw() +
-    theme(legend.position="none")
-}
-```
-
-```{r Oki_Bar_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(gbs$Oki_Bar)
-```
-
 ## Oki vs Osa
 
-Dot plot intended for panel A of figure 1.
-
-```{r Oki_Osa, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
-makeOxfordPlots(coa$Oki_Osa, diag = FALSE) + theme_bw() + theme(legend.position="none")
-```
-
-The plot below is based on aligned regions (before coalescing).  It is displayed
-to demonstrate that it is visually similar to the one above made on mapped
-regions (object after coalescing).
+Line plot used for panel A of Figure 1.  Is based on aligned regions
+(before coalescing), stored in the `gbs` object.  The manually set colors are
+used throughout the manuscript to represent chromosomes 1 and 2, the PAR, the
+XSR and the YSR.
 
 ```{r Oki_Osa_gbs, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
 makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) +
@@ -108,16 +48,24 @@ makeOxfordPlots(gbs$Oki_Osa, diag = FALSE) +
   theme(legend.position="none")
 ```
 
-Oxford plot colored by strand.
+Same, colored by strand.
 
 ```{r Oki_Osa_strand, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
+makeOxfordPlots(gbs$Oki_Osa, diag = FALSE, col = "strand") + theme_bw() + theme(legend.position="none")
+```
+
+Same, using collinear regions from the `coa` object (we used to call these
+regions 'coalesced' in a earlier phase of the project).  Visually, the two
+line plots are very similar.
+
+```{r Oki_Osa_strand_coa, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
 makeOxfordPlots(coa$Oki_Osa, diag = FALSE, col = "strand") + theme_bw() + theme(legend.position="none")
 ```
 
-10-Mb square window plot.
+## Oki vs Bar
 
-```{r Oki_Osa_win, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
-mkOxPlotWindow(gbs$Oki_Osa)
+```{r Oki_Bar_all}
+makeOxfordPlots(coa$Oki_Bar, diag = FALSE)
 ```
 
 ## Osa vs Bar
@@ -126,18 +74,10 @@ mkOxPlotWindow(gbs$Oki_Osa)
 makeOxfordPlots(coa$Osa_Bar, diag = FALSE)
 ```
 
-```{r Osa_Bar_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(gbs$Osa_Bar)
-```
-
 ## Osa vs Oki
 
 ```{r Osa_Oki}
 makeOxfordPlots(coa$Osa_Oki, diag = FALSE)
-```
-
-```{r Osa_Oki_win, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
-mkOxPlotWindow(gbs$Osa_Oki)
 ```
 
 ## Osa vs Aom
@@ -146,92 +86,12 @@ mkOxPlotWindow(gbs$Osa_Oki)
 makeOxfordPlots(coa$Osa_Aom, diag = FALSE)
 ```
 
-
-```{r Osa_Aom_win_prepare}
-Osa_Aom_PAR <- gbs$Osa_Aom |> plyranges::filter(seqnames == "PAR")
-seqlevels(Osa_Aom_PAR)       <- seqlevelsInUse(Osa_Aom_PAR)
-seqlevels(Osa_Aom_PAR$query) <- seqlevelsInUse(Osa_Aom_PAR$query)
-
-makeOxfordPlots(Osa_Aom_PAR)
-
-# Let's remove the contigs that have their main match elsewhere.
-QTcoverage <- function(gb) {
-  stopifnot (length(seqlevels(gb)) == 1) # Not ready for full objects
-  stopifnot (!any(is.na(seqlengths(gb$query))))
-  grl <- split(gb, seqnames(gb$query))
-  lapply(grl, \(gb) sum(width(gb$query))) |> unlist() / seqlengths(gb$query)
-}
-Osa_Aom_PAR[seqnames(Osa_Aom_PAR$query) %in% seqlevels(Osa_Aom_PAR$query)[QTcoverage(Osa_Aom_PAR) < 0.5]] <- NULL
-seqlevels(Osa_Aom_PAR$query) <- seqlevelsInUse(Osa_Aom_PAR$query)
-makeOxfordPlots(Osa_Aom_PAR)
-
-# Let's remove the smallest ones that barely display on one pixel
-seqlengths(Osa_Aom_PAR$query)
-Osa_Aom_PAR[seqnames(Osa_Aom_PAR$query) %in% seqlevels(Osa_Aom_PAR$query)[seqlengths(Osa_Aom_PAR$query) < 2e4]] <- NULL
-seqlevels(Osa_Aom_PAR$query) <- seqlevelsInUse(Osa_Aom_PAR$query)
-makeOxfordPlots(Osa_Aom_PAR, col = "strand")
-
-# And now let's flip by hand the ones that need
-grl <- split(Osa_Aom_PAR, seqnames(Osa_Aom_PAR$query))
-grl[["contig_38_1"]] <- reverse(grl[["contig_38_1"]], query = TRUE)
-grl[["contig_49_1"]] <- reverse(grl[["contig_49_1"]], query = TRUE)
-Osa_Aom_PAR <- unlist(grl)
-makeOxfordPlots(Osa_Aom_PAR, col = "strand")
-
-# Finally, let's reorder and merge remaining seqlevels
-seqlevels(Osa_Aom_PAR$query) <- seqlevels(Osa_Aom_PAR$query)[orderQuerySeqLevels(Osa_Aom_PAR)]
-Osa_Aom_PAR$query <- mergeSeqLevels(Osa_Aom_PAR$query, seqlevels(Osa_Aom_PAR$query), "PAR")
-```
-
-```{r Osa_Aom_win, dev=c('png', 'svg', 'pdf'), fig.ext=c('png', 'svg', 'pdf')}
-mkOxPlotWindow(Osa_Aom_PAR)
-```
-
 ## Oki vs Kum
 
 ```{r Oki_Kum}
 makeOxfordPlots(coa$Oki_Kum)
 ```
 
-```{r Oki_Kum_win_prepare}
-Oki_Kum_PAR <- gbs$Oki_Kum |> plyranges::filter(seqnames == "PAR")
-seqlevels(Oki_Kum_PAR)       <- seqlevelsInUse(Oki_Kum_PAR)
-seqlevels(Oki_Kum_PAR$query) <- seqlevelsInUse(Oki_Kum_PAR$query)
-
-makeOxfordPlots(Oki_Kum_PAR)
-
-# Let's remove the contigs that have their main match elsewhere.
-QTcoverage <- function(gb) {
-  stopifnot (length(seqlevels(gb)) == 1) # Not ready for full objects
-  stopifnot (!any(is.na(seqlengths(gb$query))))
-  grl <- split(gb, seqnames(gb$query))
-  lapply(grl, \(gb) sum(width(gb$query))) |> unlist() / seqlengths(gb$query)
-}
-Oki_Kum_PAR[seqnames(Oki_Kum_PAR$query) %in% seqlevels(Oki_Kum_PAR$query)[QTcoverage(Oki_Kum_PAR) < 0.5]] <- NULL
-seqlevels(Oki_Kum_PAR$query) <- seqlevelsInUse(Oki_Kum_PAR$query)
-makeOxfordPlots(Oki_Kum_PAR)
-
-# Let's remove the smallest ones that barely display on one pixel
-seqlengths(Oki_Kum_PAR$query)
-Oki_Kum_PAR[seqnames(Oki_Kum_PAR$query) %in% seqlevels(Oki_Kum_PAR$query)[seqlengths(Oki_Kum_PAR$query) < 2e4]] <- NULL
-seqlevels(Oki_Kum_PAR$query) <- seqlevelsInUse(Oki_Kum_PAR$query)
-makeOxfordPlots(Oki_Kum_PAR)
-
-# And now let's flip by hand the ones that need
-grl <- split(Oki_Kum_PAR, seqnames(Oki_Kum_PAR$query))
-grl[["contig_12_1"]] <- reverse(grl[["contig_12_1"]], query = TRUE)
-grl[["contig_43_1"]] <- reverse(grl[["contig_43_1"]], query = TRUE)
-Oki_Kum_PAR <- unlist(grl)
-makeOxfordPlots(Oki_Kum_PAR)
-
-# Finally, let's reorder and merge remaining seqlevels
-seqlevels(Oki_Kum_PAR$query) <- seqlevels(Oki_Kum_PAR$query)[orderQuerySeqLevels(Oki_Kum_PAR)]
-Oki_Kum_PAR$query <- mergeSeqLevels(Oki_Kum_PAR$query, seqlevels(Oki_Kum_PAR$query), "PAR")
-```
-
-```{r Oki_Kum_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(Oki_Kum_PAR)
-```
 
 # Ciona
 
@@ -241,25 +101,16 @@ mkOxPlotWindow(Oki_Kum_PAR)
 makeOxfordPlots(coa$Ply_Ros) + ggtitle("Ciona intestinalis Plymouth vs Roscoff")
 ```
 
-```{r Ply_Ros_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(gbs$Ply_Ros) + ggtitle("Ciona intestinalis Plymouth vs Roscoff")
-```
-
 ## _Ciona intestinalis_ (Plymouth) vs _Ciona robusta_
 
 ```{r Ply_Rob}
 makeOxfordPlots(coa$Ply_Rob) + ggtitle("Ciona intestinalis Plymouth vs Ciona robusta")
 ```
 
-```{r Ply_Rob_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(gbs$Ply_Rob) + ggtitle("Ciona intestinalis Plymouth vs Ciona robusta")
-```
-
 ## Troubleshoot of grid pattern
 
 We see horizontal patterns what are they?  I think they may be pericentromeric
 regions.
-
 
 ```{r Ply_Rob_point_plot}
 makeOxfordPlots(coa$Ply_Rob) + ggtitle("Ciona intestinalis Plymouth vs Ciona robusta")
@@ -299,41 +150,6 @@ coa$Ply_Rob |>
 makeOxfordPlots(coa$Ply_Sav) + ggtitle("Ciona intestinalis Plymouth vs Ciona savignyi")
 ```
 
-```{r Ply_Sav_win_prepare}
-Ply_Sav_chr1 <- gbs$Ply_Sav |> plyranges::filter(seqnames == "BNJZ01000001.1")
-seqlevels(Ply_Sav_chr1)       <- seqlevelsInUse(Ply_Sav_chr1)
-seqlevels(Ply_Sav_chr1$query) <- seqlevelsInUse(Ply_Sav_chr1$query)
-Ply_Sav_chr1$query <- forceSeqLengths(Ply_Sav_chr1$query)
-
-makeOxfordPlots(Ply_Sav_chr1)
-
-# Let's remove the contigs that have their main match elsewhere.
-QTcoverage <- function(gb) {
-  stopifnot (length(seqlevels(gb)) == 1) # Not ready for full objects
-  stopifnot (!any(is.na(seqlengths(gb$query))))
-  grl <- split(gb, seqnames(gb$query))
-  lapply(grl, \(gb) sum(width(gb$query))) |> unlist() / seqlengths(gb$query)
-}
-Ply_Sav_chr1[seqnames(Ply_Sav_chr1$query) %in% seqlevels(Ply_Sav_chr1$query)[QTcoverage(Ply_Sav_chr1) < 0.05]] <- NULL
-seqlevels(Ply_Sav_chr1$query) <- seqlevelsInUse(Ply_Sav_chr1$query)
-makeOxfordPlots(Ply_Sav_chr1)
-
-# Let's remove the smallest ones that barely display on one pixel
-seqlengths(Ply_Sav_chr1$query)
-Ply_Sav_chr1[seqnames(Ply_Sav_chr1$query) %in% seqlevels(Ply_Sav_chr1$query)[seqlengths(Ply_Sav_chr1$query) < 2e4]] <- NULL
-seqlevels(Ply_Sav_chr1$query) <- seqlevelsInUse(Ply_Sav_chr1$query)
-makeOxfordPlots(Ply_Sav_chr1)
-
-# Finally, let's reorder and merge remaining seqlevels
-seqlevels(Ply_Sav_chr1$query) <- seqlevels(Ply_Sav_chr1$query)[orderQuerySeqLevels(Ply_Sav_chr1)]
-Ply_Sav_chr1$query <- mergeSeqLevels(Ply_Sav_chr1$query, seqlevels(Ply_Sav_chr1$query), "Merged matching contigs")
-makeOxfordPlots(Ply_Sav_chr1)
-```
-
-```{r Ply_Sav_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(Ply_Sav_chr1) + ggtitle("Ciona intestinalis Plymouth vs Ciona savignyi")
-```
-
 # Drosophila
 
 ## vs Drosophila mauritania
@@ -342,19 +158,10 @@ mkOxPlotWindow(Ply_Sav_chr1) + ggtitle("Ciona intestinalis Plymouth vs Ciona sav
 makeOxfordPlots(coa$Dme_Dma) + ggtitle("Dmel vs Dmau")
 ```
 
-```{r Dmel_Dmau_win, dev='svg', fig.ext='svg'}
-# Force strand flipping for aesthetic purpose
-mkOxPlotWindow(gbs$Dme_Dma |> forceSeqLengths() |> reverse()) + ggtitle("Drosophila melanogaster vs Drosophila mauritania")
-```
-
 ## vs Drosophila yakuba
 
 ```{r Dmel_Dyak}
 makeOxfordPlots(coa$Dme_Dya) + ggtitle("Dmel vs Dyak")
-```
-
-```{r Dmel_Dyak_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(gbs$Dme_Dya) + ggtitle("Drosophila melanogaster vs Drosophila yakuba")
 ```
 
 ## vs Drosophila subpulchrella
@@ -363,20 +170,10 @@ mkOxPlotWindow(gbs$Dme_Dya) + ggtitle("Drosophila melanogaster vs Drosophila yak
 makeOxfordPlots(coa$Dme_Dsu) + ggtitle("Dmel vs Dsub")
 ```
 
-```{r Dmel_Dsub_win, dev='svg', fig.ext='svg'}
-# Blacklist 3R as the algorithm does not find an nicely square window on it.
-mkOxPlotWindow(gbs$Dme_Dsu |> plyranges::filter(seqnames != "3R")) + ggtitle("Drosophila melanogaster vs Drosophila subpulchrella")
-```
-
 ## vs Drosophila buskii
 
 ```{r Dmel_Dbus}
 makeOxfordPlots(coa$Dme_Dbu) + ggtitle("Dmel vs Dbus")
-```
-
-
-```{r Dmel_Dbus_win, dev='svg', fig.ext='svg'}
-mkOxPlotWindow(gbs$Dme_Dbu) + ggtitle("Drosophila melanogaster vs Drosophila buskii")
 ```
 
 # Mammals
@@ -387,10 +184,10 @@ Chromosome 18 was chosen because it is small and it has the same name in both
 species.  Region was centered on the alignment with the longest width, as
 otherwise the window out of target.
 
-Still, most of the region is not aligned.  The syntenic regions only look
-contiguous because the dots need to be thick to be easy to see.
+Note that each of these chromosomes is longer than any _Oikopleura dioica_
+genome.
 
 ```{r hg38_mm10, dev='svg', fig.ext='svg'}
 hgmm <- load_genomic_breaks(system.file(("extdata/hg38_mm10/hg38_chr18__mm10_chr18.gff3"), package = "BreakpointsData"))
-mkOxPlotWindow(hgmm, centre = 'maxwidth') + ggtitle("Homo sapiens vs Mus musculus")
+makeOxfordPlots(hgmm, col = "strand") + ggtitle("Homo sapiens vs Mus musculus")
 ```
