--- a/vignettes/OxfordPlots.Rmd
+++ b/vignettes/OxfordPlots.Rmd
@@ -55,6 +55,8 @@ Same, colored by strand.
 makeOxfordPlots(gbs$Oki_Osa, diag = FALSE, col = "strand") + theme_bw() + theme(legend.position="none")
 ```
 
+The other plots use default _ggplot2_ colors.
+
 ## Oki vs Bar
 
 ```{r Oki_Bar_all}
